--- a/main/pom.xml
+++ b/main/pom.xml
@@ -5,6 +5,10 @@
 	<artifactId>DZ_VitaSoft_2D</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
