--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 			<artifactId>jfoenix</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<!-- Font -->
+		<dependency>
+			<groupId>de.jensd</groupId>
+			<artifactId>fontawesomefx</artifactId>
+			<version>8.0.10</version>
+		</dependency>
 
 		<!-- Spring -->
 		<dependency>
