--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,12 +1,14 @@
 #DB properties:
-db.driver=org.h2.Driver
-db.url=jdbc:h2:~/DZ_VitaSoft_2D/h2.db
-db.username=sa
-db.password=
+driver=org.h2.Driver
+url=jdbc:h2:~/DZ_VitaSoft_2D/h2.db
+username=sa
+password=
  
 #Hibernate Configuration:
-db.hibernate.dialect=org.hibernate.dialect.H2Dialect
-db.hibernate.show_sql=true
-db.hibernate.format_sql=true
-db.hibernate.use_sql_comments=true
-db.hibernate.hbm2ddl.auto = update
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.show_sql=true
+hibernate.format_sql=true
+hibernate.use_sql_comments=true
+hibernate.hbm2ddl.auto=create-drop
+
+
